# RacingGame

./: .gitignore  .gitmodules  CMakeLists.txt  setup.bat
engine/: GameState.cpp  GameState.h
engine/Audio/: AudioManager.cpp  AudioManager.h  WavFile.cpp
engine/Graphics/: ModelInfo.cpp  ModelInfo.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
engine/Physics/: Controller.cpp  Controller.h  Physics.cpp  Physics.h
engine/Util/: Assets.cpp  Assets.h
example/: Entitys.cpp  Entitys.h  GameManager.cpp  GameManager.h  main.cpp
src/: Entitys.cpp  Entitys.h  GameManager.cpp  GameManager.h  GameState.cpp  GameState.h  main.cpp
src/Audio/: AudioManager.cpp  AudioManager.h
src/Game/: Entitys.cpp  Entitys.h  GameManager.cpp  GameManager.h
src/Graphics/: Camera.cpp  Camera.h  GLIncludes.h  ModelInfo.cpp  ModelInfo.h  Renderable.cpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
src/Physics/: Controller.cpp  Controller.h  Physics.cpp  Physics.h
src/Util/: Assets.cpp  Assets.h  Math.h  Utility.h
